--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
-addopts = --cov=arse --no-cov-on-fail --cov-report html --cov-report term-missing
+addopts = --cov=argser --no-cov-on-fail --cov-report html --cov-report term-missing
 python_files = tests.py test_*.py
