--- a/requirements.txt
+++ b/requirements.txt
@@ -3,17 +3,24 @@ attrs==19.2.0
 bleach==3.1.0
 certifi==2019.9.11
 chardet==3.0.4
+coverage==4.5.4
 docutils==0.15.2
+entrypoints==0.3
+flake8==3.7.8
 idna==2.8
 importlib-metadata==0.23
+mccabe==0.6.1
 more-itertools==7.2.0
 packaging==19.2
 pkginfo==1.5.0.1
 pluggy==0.13.0
 py==1.8.0
+pycodestyle==2.5.0
+pyflakes==2.1.1
 Pygments==2.4.2
 pyparsing==2.4.2
 pytest==5.2.1
+pytest-cov==2.8.1
 readme-renderer==24.0
 requests==2.22.0
 requests-toolbelt==0.9.1
