--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Python package
+name: build
 
 on: [push]
 
@@ -31,7 +31,11 @@ jobs:
         flake8 argser.py --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 argser.py --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
+    - name: Testing
       run: |
         pip install pytest pytest-cov
-        pytest --cov=argser --cov-report term-missing
+        pytest --cov=argser --cov-report term-missing --cov-report xml
+    - name: Coverage
+      run: |
+        pip install codecov
+        codecov --token=$CODECOV_TOKEN
