--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
       run: |
         pip install pytest pytest-cov
         pytest --cov=argser --cov-report term-missing --cov-report xml
-    - name: Coverage
+    - name: Upload coverage to Codecov
       run: |
         pip install codecov
-        codecov --token=$CODECOV_TOKEN
+        codecov -t ${{ secrets.CODECOV_TOKEN }}
