🔊 lower debug level

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
 python_files = tests.py test_*.py
-log_level=DEBUG
-log_format=[%(levelname)-7s :%(lineno)3s] %(message)s
+log_level=5
+log_format=[%(levelname)-7s %(name)16s:%(lineno)-3s] %(message)s
