--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ license = "MIT"
 readme = "README.md"
 homepage = "https://github.com/vaniakosmos/argser"
 repository = "https://github.com/vaniakosmos/argser"
-documentation = "https://github.com/vaniakosmos/argser"
+documentation = "https://argser.readthedocs.io/en/latest"
 keywords = ['flags', 'argparse']
 classifiers = [
     'Development Status :: 4 - Beta',
@@ -22,6 +22,10 @@ tabulate = {version = "^0.8.5", optional = true}
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 pytest-cov = "^2.8"
+sphinx = "^2.2"
+sphinx-rtd-theme = "^0.4.3"
+sphinxcontrib-apidoc = "^0.3.0"
+m2r = "^0.2.1"
 
 [tool.poetry.extras]
 tabulate = ["tabulate"]
