--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install poetry
         poetry config settings.virtualenvs.create false
-        poetry install -E tabulate
+        poetry install -E all
     - name: Lint with flake8
       run: |
         pip install flake8
