--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,4 +1,5 @@
 alabaster==0.7.12
+argcomplete==1.10.0
 atomicwrites==1.3.0
 attrs==19.2.0
 Babel==2.7.0
@@ -20,6 +21,8 @@ pluggy==0.13.0
 py==1.8.0
 Pygments==2.4.2
 pyparsing==2.4.2
+pytest==5.2.1
+pytest-cov==2.8.1
 pytz==2019.3
 requests==2.22.0
 six==1.12.0
@@ -33,6 +36,7 @@ sphinxcontrib-htmlhelp==1.0.2
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.2
 sphinxcontrib-serializinghtml==1.1.3
+tabulate==0.8.5
 urllib3==1.25.6
 wcwidth==0.1.7
 zipp==0.6.0
