--- a/.github/workflows/test-publish.yml
+++ b/.github/workflows/test-publish.yml
@@ -4,6 +4,8 @@ on: [push]
 
 jobs:
   test:
+    # only test current event if it is not version bump or version bump and has release tag
+    if: startsWith(github.ref, 'refs/tags/v') || github.event.message != 'bump version'
     runs-on: ${{ matrix.os }}
     strategy:
       max-parallel: 4
@@ -33,8 +35,8 @@ jobs:
           codecov -t ${{ secrets.CODECOV_TOKEN }}
 
   publish:
+    if: startsWith(github.ref, 'refs/tags/v')
     needs: test
-    if: contains(github.ref, '/tags/')
     runs-on: ubuntu-latest
 
     steps:
