--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,12 @@ description = "Arguments parsing without boilerplate."
 authors = ["Bachynin Ivan <bachynin.i@gmail.com>"]
 license = "MIT"
 readme = "README.md"
-homepage = "https://github.com/vaniakosmos/argser"
-repository = "https://github.com/vaniakosmos/argser"
+homepage = "https://github.com/vanyakosmos/argser"
+repository = "https://github.com/vanyakosmos/argser"
 documentation = "https://argser.readthedocs.io/en/latest"
 keywords = ['flags', 'argparse']
 classifiers = [
-    'Development Status :: 4 - Beta',
+    'Development Status :: 3 - Alpha',
     'Intended Audience :: Developers',
     'Topic :: Utilities',
 ]
