--- a/.github/workflows/test-publish.yml
+++ b/.github/workflows/test-publish.yml
@@ -5,7 +5,7 @@ on: [push]
 jobs:
   test:
     # only test current event if it is not version bump or version bump and has release tag
-    if: startsWith(github.ref, 'refs/tags/v') || github.event.message != 'bump version'
+    if: startsWith(github.ref, 'refs/tags/v') || !startsWith(github.event.message, 'bump version')
     runs-on: ${{ matrix.os }}
     strategy:
       max-parallel: 4
