--- a/.github/workflows/test-publish.yml
+++ b/.github/workflows/test-publish.yml
@@ -48,4 +48,4 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install poetry
-          poetry publish --build -u ${{ secrets.PYPI_USERNAME }} -p ${{ secrets.PYPI_PASSWORD }}
+          poetry publish --build -u ${{ secrets.PYPI_USERNAME }} -p ${{ secrets.PYPI_PASSWORD }} || echo already uploaded
