--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,10 @@
 [pytest]
+testpaths = docs/source/examples.rst tests argser
 python_files = tests.py test_*.py
+
 log_level=5
-log_format=[%(levelname)-7s %(name)16s:%(lineno)-3s] %(message)s
+log_format=%(levelname)-7s %(name)16s:%(lineno)-3s > %(message)s
+
+doctest_plus = enabled
+text_file_format = rst
+doctest_rst = True
