--- a/pytest.ini
+++ b/pytest.ini
@@ -8,3 +8,7 @@ log_format=%(levelname)-7s %(name)16s:%(lineno)-3s > %(message)s
 doctest_plus = enabled
 text_file_format = rst
 doctest_rst = True
+doctest_optionflags = ELLIPSIS NORMALIZE_WHITESPACE
+
+env = 
+    ANSI_COLORS_DISABLED=1
