--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,21 @@
-name: test-publish
+name: tests
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
+  linting:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - name: Set up Python 3.7
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.7
+      - name: Linting
+        run: |
+          pip install pre-commit
+          pre-commit run --all-files
+
   test:
     # only test current event if it is not version bump or version bump and has release tag
     if: startsWith(github.ref, 'refs/tags/v') || !startsWith(github.event.message, 'bump version')
