--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,11 @@ sphinx-rtd-theme = "^0.4.3"
 sphinxcontrib-apidoc = "^0.3.0"
 m2r = "^0.2.1"
 pytest-doctestplus = "^0.4.0"
-pytest-env = "^0.6.2"
+pytest-sugar = "^0.9.2"
+pre-commit = "^1.20"
+flake8 = "^3.7"
+black = {version = "^18.3-alpha.0", allows-prereleases = true}
+pytest-mock = "^1.11"
 
 [tool.poetry.extras]
 tabulate = ["tabulate"]
@@ -38,6 +42,29 @@ all = ["tabulate", "argcomplete"]
 
 [tool.poetry.scripts]
 argser = "argser.__main__:main"
+
+[tool.black]
+line-length = 88
+skip-string-normalization = true
+target-version = ['py37']
+include = '\.pyi?$'
+exclude = '''
+(
+  /(
+      \.eggs
+    | \.git
+    | \.hg
+    | \.mypy_cache
+    | \.tox
+    | \.venv
+    | _build
+    | buck-out
+    | build
+    | dist
+  )/
+  | playground.py
+)
+'''
 
 [build-system]
 requires = ["poetry>=0.12"]
