--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: tests
 
-on: [push, pull_request]
+on: [push]
 
 jobs:
   linting:
@@ -40,7 +40,7 @@ jobs:
           poetry install -E all
       - name: Test
         run: |
-          pip install pytest pytest-cov
+          pip install pytest pytest-cov pytest-sugar
           pytest --cov=argser --cov-report term-missing --cov-report xml
       - name: Upload coverage to Codecov
         run: |
