--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install poetry
-          poetry config settings.virtualenvs.create false
+          poetry config virtualenvs.create false
           poetry install -E all
       - name: Test
         run: |
