--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ pytest-doctestplus = "^0.4.0"
 pytest-sugar = "^0.9.2"
 pre-commit = "^1.20"
 flake8 = "^3.7"
-black = {version = "^18.3-alpha.0", allows-prereleases = true}
+black = {version = "^18.3-alpha.0", allow-prereleases = true}
 pytest-mock = "^1.11"
 
 [tool.poetry.extras]
